--- a/profile.css
+++ b/profile.css
@@ -126,3 +126,20 @@ header>h3 {
     opacity: 0;
     transition: all 0.7s;
 }
+
+/*for phone*/
+@media only screen and (max-width:1000px) {
+    #profile>section:nth-of-type(2)>p:nth-of-type(1) {
+        line-height: 2vw;
+        font-size: 1.5vw;
+    }
+
+    #profile>section:nth-of-type(2)>p:nth-of-type(2) {
+        font-size: 1.4vw;
+    }
+
+    .readmore>section>input {
+        font-size: 1.8vw;
+        width: 30%;
+    }
+}
